--- a/part_1_data_cleaning.ipynb
+++ b/part_1_data_cleaning.ipynb
@@ -1842,7 +1842,7 @@
     }
    ],
    "source": [
-    "placements_df = pd.read_csv('./PLACEmentsSkillGraph.csv')\n",
+    "placements_df = pd.read_csv('./data/PLACEmentsSkillGraph.csv')\n",
     "placements_df.head(10)"
    ]
   },
